--- a/01-Fundamentals/counter-app/src/index.css
+++ b/01-Fundamentals/counter-app/src/index.css
@@ -2,6 +2,12 @@ html, body{
 	background-color: #21232A;
 	color: white;
 	font-family: Helvetica, Arial, sans-serif;
-	font-size: 1.3 rem;
+	font-size: 1.3rem;
 	padding: 30px;
+}
+
+button {
+	padding: 10px;
+	font-size: 1.3rem;
+	margin-right: 10px;
 }
