--- a/01-Fundamentals/gif-expert-app/src/index.css
+++ b/01-Fundamentals/gif-expert-app/src/index.css
@@ -12,3 +12,26 @@ input{
 	width: 100%;
 	color: gray;
 }
+
+.card{
+	align-content: center;
+	border: 1px solid grey;
+	border-radius: 6px;
+	margin: 10px;
+	overflow: hidden;
+}
+
+.card p {
+	padding: 5px;
+	text-align: center;
+}
+
+.card img{
+	max-height: 170px;
+}
+
+.card-grid{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
